# connectors

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md
7560-1726825195/: docker-compose.yml  go.mod  manifest.yaml
<connector-name>/: docker-compose.yml  docker-compose.yml.template  go.mod  go.mod.template  manifest.yaml.template
aave/: aave.go  contract.go  go.mod  go.sum  types.go
aisdfijsadf-1726614744/: docker-compose.yml  go.mod  manifest.yaml
asdfojasdjf-1726614860/: docker-compose.yml  go.mod  manifest.yaml
asdfsdf-1726614579/: docker-compose.yml  go.mod  manifest.yaml
binance/: README.md  binance.go  go.mod  go.sum  manifest.yaml  request.go
bitcoin/: README.md  bitcoin.go  bitcoin.pb.go  bitcoin.proto  bitcoin_test.go  go.mod  go.sum  manifest.yaml  types.go
bitfinex/: README.md  bitfinex.go  go.mod  go.sum  manifest.yaml
bitmex/: README.md  bitmex.go  go.mod  go.sum  manifest.yaml
bybit/: README.md  bybit.go  bybit_parameters.go  bybit_test.go  bybit_types.go  go.mod  go.sum  manifest.yaml
candymachine/: candymachine.go  candymachine.pb.go  candymachine.proto  decoder.go  go.mod  go.sum  manifest.yaml  types.go
concon-1726615067/: docker-compose.yml  go.mod  manifest.yaml
cyber/: .gitignore  Dockerfile  (+8 more)
near/: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  client.go  go.mod  go.sum  manifest.yaml  near.go  near.pb.go  near.proto  subscription.go
near/cmd/near/: main.go
near/src/: lake_stream.rs  lib.rs  main.rs  ws_server.rs
near/src/types/: block.rs  handle.rs  mod.rs  outcome.rs  receipt.rs  transaction.rs
(+1234 files in other folders)
