[package]
name = "nakji_near_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
futures = "0.3.5"
itertools = "0.10.3"
tokio = { version = "1.1", features = ["full"] }
tokio-stream = { version = "0.1" }
prost = "0.11.0"
prost-types = "0.11.0"
ws = "0.9.2"
crossbeam-channel = "0.5.6"
near-jsonrpc-client = "0.4.0"
near-primitives = "0.15.0"
serde_json = "1.0.86"
yaml-rust = "0.4.5"
home = "0.5.4"
aws-types = "0.13.0"
aws-sdk-s3 = "0.13.0"

# NEAR Lake Framework
near-lake-framework = "0.5.2"

[build-dependencies]
prost-build = "0.11.1"